--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,7 @@ os: linux
 files:
         - source: /
           destination: /home/ubuntu/nodeapp
+file_exists_behavior: OVERWRITE
 hooks:
         AfterInstall:
                 - location: AfterInstallHook.sh
