--- a/appspec.yml
+++ b/appspec.yml
@@ -8,3 +8,4 @@ hooks:
         AfterInstall:
                 - location: AfterInstallHook.sh
                   timeout: 300
+                  runas: ubuntu
